syntax = "proto3";

package posts;

service PostsService {
  rpc FindAllPosts (UserId) returns (PostsArray);
  rpc FindAllPostsByTag (TagAndUserId) returns (PostsArray);
  rpc FindOnePost (PostIdAndUserId) returns (Post);
  rpc CreatePost (CreatePostForm) returns (Empty);
  rpc UpdatePost (UpdatePostForm) returns (ContentDir);
  rpc DeletePost (PostId) returns (Empty);
  rpc SendComments (PostIdAndUserId) returns (CommentsArray);
  rpc SendCommentAnswers (CommentIdAndUserId) returns (CommentsArray);
  rpc CreateComment (CreateCommentForm) returns (Empty);
  rpc UpdateComment (CommentId) returns (ContentDir);
  rpc DeleteComment (CommentId) returns (Empty);
  rpc AddLikeToPost (PostIdAndUserId) returns (Empty);
  rpc RemoveLikeFromPost (PostIdAndUserId) returns (Empty);
  rpc AddLikeToComment (CommentIdAndUserId) returns (Empty);
  rpc RemoveLikeFromComment (CommentIdAndUserId) returns (Empty);
}

message Post {
  string id = 1;
  string title = 2;
  string contentDir = 3;
  string authorId = 4;
  string likesNumber = 5;
  string commentsNumber = 6;
  bool isLiked = 7;
}

message PostsArray {
  repeated Post posts = 1;
}

message CreatePostForm {
  string title = 1;
  string contentDir = 2;
  string authorId = 3;
  string text = 4;
}

message UpdatePostForm {
  string id = 1;
  string titile = 2;
  string authorId = 3;
  string text = 4;
}

message PostId {
  string postsId = 1;
}

message UserId {
  string userId = 1;
}

message PostIdAndUserId {
  string postId = 1;
  string userId = 2;
}

message Comment {
  string id = 1;
  string authorId = 2;
  string likesNumber = 4;
  string contentDir = 5;
  bool isLiked = 6;
  string answersNumber = 7;
}

message CommentsArray {
  repeated Comment comments = 1;
}

message CreateCommentForm {
  string postId = 1;
  string authorId = 2;
  string isAnswerFor = 3;
  string contentDir = 4;
}

message CommentId {
  string commnetId = 1;
}

message CommentIdAndUserId {
  string commentId = 1;
  string userId = 2;
}

message TagAndUserId {
  string tag = 1;
  string userId = 2;
}

message ContentDir {
  string name = 1;
}

message Empty {}